TxtRot no longer gets stuck in infinite loop when props.words.length <= 4.

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,5 +1,5 @@
-$bgc: #01062ae0;//rgba(0, 0, 0, 0.844);
-$bgc-on-hover: #02083ae0;// rgba(0, 0, 0, 0.860);
+$bgc: rgba(0, 0, 0, 0.844);
+$bgc-on-hover: rgba(0, 0, 0, 0.860);
 .left-column {
   cursor: pointer;
   overflow: hidden;
