--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -11,7 +11,7 @@
     left: 0;
     top: 0;
     bottom: 0;
-    width: 530px;
+    width: 681px;
     height: 70px;
     font-size: 50px;
     .link {
