--- a/src/styles/Life.scss
+++ b/src/styles/Life.scss
@@ -219,6 +219,10 @@
       padding-top: 9px;
       font-size: 1.5em;
       font-weight: bold;
+      transition: .3s background-color;
+      &:hover {
+        background-color: #c3ddffba;
+      }
     }
   }
 }
